[gd_scene load_steps=3 format=2]

[ext_resource path="res://enemies/EnemiesManager.gd" type="Script" id=1]
[ext_resource path="res://enemies/EnemySpawner.tscn" type="PackedScene" id=2]

[node name="EnemiesManager" type="Node"]
script = ExtResource( 1 )

[node name="EnemySpawner" parent="." instance=ExtResource( 2 )]

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
